--- a/.ci_support/migrations/cuda120.yaml
+++ b/.ci_support/migrations/cuda120.yaml
@@ -12,61 +12,28 @@ __migrator:
     - cuda_compiler_stub
   operation: key_add
   primary_key: cuda_compiler_version
-  ordering:
-    cxx_compiler_version:
-      - 9
-      - 8
-      - 7
-    c_compiler_version:
-      - 9
-      - 8
-      - 7
-    fortran_compiler_version:
-      - 9
-      - 8
-      - 7
-    docker_image:
-      - quay.io/condaforge/linux-anvil-comp7              # [os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-aarch64            # [os.environ.get("BUILD_PLATFORM") == "linux-aarch64"]
-      - quay.io/condaforge/linux-anvil-ppc64le            # [os.environ.get("BUILD_PLATFORM") == "linux-ppc64le"]
-      - quay.io/condaforge/linux-anvil-armv7l             # [os.environ.get("BUILD_PLATFORM") == "linux-armv7l"]
-      - quay.io/condaforge/linux-anvil-cuda:9.2           # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cuda:10.0          # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cuda:10.1          # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cuda:10.2          # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cuda:11.0          # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cuda:11.1          # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cuda:11.2          # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-      - quay.io/condaforge/linux-anvil-cos7-x86_64        # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-    cuda_compiler_version:
-      - None
-      - 10.2                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-      - 11.0                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-      - 11.1                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-      - 11.2                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-      - 12.0                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   commit_message: "Rebuild for CUDA 12"
 
-cuda_compiler:
-  - cuda-nvcc                  # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+cuda_compiler:                 # [linux64 or win]
+  - cuda-nvcc                  # [linux64 or win]
 
-cuda_compiler_version:
-  - 12.0                       # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+cuda_compiler_version:         # [linux64 or win]
+  - 12.0                       # [linux64 or win]
 
-c_compiler_version:            # [unix]
-  - 12                         # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+c_compiler_version:            # [linux64]
+  - 12                         # [linux64]
 
-cxx_compiler_version:          # [unix]
-  - 12                         # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+cxx_compiler_version:          # [linux64]
+  - 12                         # [linux64]
 
-fortran_compiler_version:      # [unix]
-  - 12                         # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+fortran_compiler_version:      # [linux64]
+  - 12                         # [linux64]
 
-cudnn:
-  - 8                          # [(linux64 or win) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+cudnn:                         # [linux64 or win]
+  - 8                          # [linux64 or win]
 
-cdt_name:  # [linux]
-  - cos7   # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+cdt_name:                      # [linux64]
+  - cos7                       # [linux64]
 
-docker_image:                                      # [os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
-  - quay.io/condaforge/linux-anvil-cos7-x86_64     # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+docker_image:                                      # [os.environ.get("BUILD_PLATFORM", "").startswith("linux")]
+  - quay.io/condaforge/linux-anvil-cos7-x86_64     # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
