--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,8 @@
 azure:
   store_build_artifacts: true
+build_platform:
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
 conda_build:
   pkg_format: '2'
 conda_forge_output_validation: true
