--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,8 @@ outputs:
         - {{ pin_subpackage("ucx", max_pin="x.x") }}
       ignore_run_exports_from:
         - {{ compiler("cuda") }}
+      ignore_run_exports:
+        - cuda-cudart  # [(cuda_compiler_version or "None").startswith("12")]
     requirements:
       build:
         - {{ compiler("c") }}
