--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,8 @@ outputs:
     build:
       run_exports:
         - {{ pin_subpackage("ucx", max_pin="x.x") }}
+      ignore_run_exports_from:
+        - {{ compiler("cuda") }}
       ignore_run_exports:
         - cudatoolkit  # [(cuda_compiler_version or "None").startswith("11")]
         - cuda-cudart  # [(cuda_compiler_version or "None").startswith("12")]
